# ai-examinator

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_rbac.py  0003_app_db_role.py  0004_phase2_clinical_records.py  0005_phase3_consultation.py  0006_phase4_ai.py  0007_phase5_integrations.py
backend/app/: __init__.py  main.py
backend/app/adapters/diarization/: port.py  stub_adapter.py
backend/app/adapters/llm/: __init__.py  local_adapter.py  model_presets.py  port.py  prompts.py  response_parser.py  settings_resolver.py  stub_adapter.py
backend/app/adapters/storage/: port.py  s3_adapter.py
backend/app/adapters/stt/: port.py  stub_adapter.py
backend/app/adapters/terminology/: port.py  stub_adapter.py
backend/app/api/: health.py  router.py
backend/app/core/: base_repository.py  config.py  database.py  dependencies.py  enums.py  errors.py  i18n.py  logging.py  models.py  security.py  tenant.py  tenant_db.py
backend/app/scripts/: run_ai_eval.py  run_pilot_readiness.py  seed_ai_training.py  seed_demo_clinical.py  seed_synthetic.py
backend/app/workers/: celery_app.py
backend/tests/: __init__.py  conftest.py  test_ai.py  test_audit.py  test_auth.py  test_clinical_records.py  test_consultation.py  test_hitl_validation.py  test_llm_adapter.py  test_mfa_and_rls.py  test_model_presets.py  test_phase5.py  test_security.py  test_tenant_isolation.py
docs/: README.md  (+24 more)
(+98 files in other folders)
